# cpptftp

./: .clang-format  .gitignore  LICENSE.MIT  README  README.md  meson.build  meson_options.txt  project_config.hpp.in
doc/: Class.drawio  libtftpclient.md  state_spec.txt
include/: async_sleep.hpp  client.hpp  duration_generator.hpp  file_io.hpp  frame.hpp  log.hpp  network_io.hpp  packet.hpp  tftp.hpp  tftp_client.hpp  tftp_common.hpp  tftp_error_code.hpp  tftp_exception.hpp  tftp_frame.hpp  tftp_server.hpp  utility.hpp
src/: client.cpp  simple_client.cpp  simple_server.cpp  tftp.cpp  tftp_client.cpp  tftp_frame.cpp  tftp_server.cpp
test/: README.md  async_sleep_test.cpp  checklist.md  duration_generator_test.cpp  file_io_test.cpp  packet.cpp  sample.cpp  test.hpp  test_packet.cpp  tftp_client.cpp  tftp_frame_test.cpp
